--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pytest-yapf3
-description = Validate your file format with yapf.
+description = Validate your Python file format with yapf.
 long_description = file: README.md, CHANGELOG.md
 long_description_content_type = text/markdown
 maintainer = Yan QiDong
