Add my name to LICENSE

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = pytest-yapf3
-description = Validate your Python file format with yapf.
+description = Validate your Python file format with yapf
 long_description = file: README.md, CHANGELOG.md
 long_description_content_type = text/markdown
-maintainer = Yan QiDong
-maintainer_email = yanqd0@outlook.com
+author = Yan QiDong
+author_email = yanqd0@outlook.com
 license = MIT
 url = 'https://github.com/yanqd0/pytest-yapf3'
 
