--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,21 @@
-# Config file for automatic testing at travis-ci.org
-
+---
 sudo: false
+
 language: python
 
-matrix:
-    include:
-      - python: 2.7
-        env: TOX_ENV=py27
-      - python: 3.6
-        env: TOX_ENV=py36
+cache: pip
+
+python:
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
 
 install:
-  - pip install tox
+  - pip install .[dev]
 
 script:
-  - tox -e $TOX_ENV
+  - pytest
 
 before_cache:
   - rm -rf $HOME/.cache/pip/log
-
-cache:
-  directories:
-    - $HOME/.cache/pip
