--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description_content_type = text/markdown
 author = Yan QiDong
 author_email = yanqd0@outlook.com
 license = MIT
-url = 'https://github.com/yanqd0/pytest-yapf3'
+url = https://github.com/yanqd0/pytest-yapf3
 
 [aliases]
 test = pytest
