--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,11 @@ addopts =
     --pylint
     --isort
     --yapf
+    --docstyle
 python_files = tests/*
 mock_use_standalone_module = true
+docstyle_add_ignore = D204
+docstyle_exclude = tests/*
 
 [isort]
 multi_line_output = 3
