--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ addopts =
     --isort
     --yapf
     --docstyle
+markers = pep8
 python_files = tests/*
 mock_use_standalone_module = true
 docstyle_add_ignore = D204
