Use pycodestyle instead of pep8

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,13 +15,12 @@ test = pytest
 addopts =
     --verbose
     --cov pytest_yapf3
-    --pep8
+    --pycodestyle
     --flake8
     --pylint
     --isort
     --yapf
     --docstyle
-markers = pep8
 python_files = tests/*
 mock_use_standalone_module = true
 docstyle_add_ignore = D204
