--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
 
 install:
   - pip install pipenv
-  - pipenv install --dev
+  - pipenv install --dev --ignore-pipfile
 
 script:
   - pipenv run pytest
