Upgrade pytest to 5.4, fix #2

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ test = pytest
 addopts =
     --verbose
     --cov pytest_yapf3
-    --pycodestyle
-    --docstyle
+    # --pycodestyle
+    # --docstyle
     --flake8
     --pylint
     --isort
